fix: added gapcursor and height tiptap

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -515,6 +515,7 @@
 
   .ProseMirror {
     outline: 0;
+    height: 100%
   }
 
   &__placeholder {
